# hyperdeal

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.MD  advection__operation_8h_source.html  advection__operation__parameters_8h_source.html  annotated.html  boundary__descriptor_8h_source.html  cfl_8h_source.html  classLinearAlgebra_1_1SharedMPI_1_1Vector-members.html  classLinearAlgebra_1_1SharedMPI_1_1Vector.html  classes.html  classhyperdeal_1_1DynamicConvergenceTable-members.html  classhyperdeal_1_1DynamicConvergenceTable.html  classhyperdeal_1_1FEEvaluation-members.html  classhyperdeal_1_1FEEvaluation.html  classhyperdeal_1_1FEEvaluationBase-members.html  classhyperdeal_1_1FEEvaluationBase.html  classhyperdeal_1_1FEEvaluationInverse-members.html  classhyperdeal_1_1FEEvaluationInverse.html  classhyperdeal_1_1FEFaceEvaluation-members.html  classhyperdeal_1_1FEFaceEvaluation.html  classhyperdeal_1_1LowStorageRungeKuttaIntegrator-members.html  classhyperdeal_1_1LowStorageRungeKuttaIntegrator.html  classhyperdeal_1_1MatrixFree-members.html  classhyperdeal_1_1MatrixFree.html  classhyperdeal_1_1MemoryConsumption-members.html  classhyperdeal_1_1MemoryConsumption.html  classhyperdeal_1_1MemoryStatMonitor-members.html  classhyperdeal_1_1MemoryStatMonitor.html  classhyperdeal_1_1ScopedLikwidTimerWrapper-members.html  classhyperdeal_1_1ScopedLikwidTimerWrapper.html  classhyperdeal_1_1ScopedTimerWrapper-members.html  classhyperdeal_1_1ScopedTimerWrapper.html  classhyperdeal_1_1TimeLoop-members.html  classhyperdeal_1_1TimeLoop.html  classhyperdeal_1_1Timer-members.html  classhyperdeal_1_1Timer.html  classhyperdeal_1_1Timers-members.html  (+113 more)
.github/workflows/: doxygen.yml  indentation.yml  nightly.yml  tests.yml
cmake/: CMakeLists.txt
cmake/config/: CMakeLists.txt  hyperdealConfig.cmake.in  hyperdealConfigVersion.cmake.in
cmake/macros/: CMakeLists.txt  macro_hyper_deal_pickup_tests.cmake  macro_hyper_deal_run_test.cmake
cmake/scripts/: CMakeLists.txt  expand_instantiations.cc
contrib/: template-arguments
contrib/utilities/: check_indentation.sh  download_clang_format  indent-all
doc/changes/: 20200814Munch-3  20200814Munch-4  20200816Munch  20200818Munch  20200818Munch-1  20200819Munch  20200826Munch  20200826Munch-1  20200826Munch-2  20200826Munch-3  20200827Munch  20220210Kiselyov
doc/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/news/changes/: 20200814Munch-1  20200814Munch-2  20200910Munch
examples/: CMakeLists.txt
examples/advection/: CMakeLists.txt  README.MD  advection.cc
examples/advection/cases/: hyperrectangle.h  torus_hyperball.h
examples/advection/include/: application.h  parameters.h
examples/advection/performance/: README.MD  all.json  all.py  all_ref.json  tokamak_all.json  (+3 more)
examples/vlasov_poisson/: CMakeLists.txt  README.MD  vlasov_poisson.cc
examples/vlasov_poisson/cases/: hyperrectangle.h  torus_hyperball.h
examples/vlasov_poisson/include/: application.h  derivative_container.h  diagnostics.h  parameters.h  poisson.h  velocity_field_view.h
examples/vlasov_poisson/performance/: tokamak_weak.json  tokamak_weak.py  weak.json  weak.py
examples/vlasov_poisson/tests/: CMakeLists.txt  README.MD  vp_2D_2D_k3.configuration  vp_2D_2D_k3.hyperrectangle_01.json  vp_2D_2D_k3.hyperrectangle_01.out  vp_2D_2D_k3_hyperrectangle_01.json
performance/: CMakeLists.txt  README.MD  operators_advection_01.likwid.cc  operators_advection_02.likwid.cc
performance/operators_advection_01/: README.MD  matrix_free_loops.json  matrix_free_loops.py  node_level_basic.json  node_level_basic.py  sizes.py  skew_symmatric_parameter.json  skew_symmatric_parameter.py  util.py
performance/operators_advection_02/: node_level_basic.json  node_level_basic.py
performance/util/: driver.h
prototypes/: CMakeLists.txt  poisson_01.cc
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  (+30 more)
source/: CMakeLists.txt
source/base/: CMakeLists.txt  function.cc  mpi.cc  time_integrators.cc  time_loop.cc  utilities.cc
source/grid/: CMakeLists.txt  grid_generator.cc  grid_generator.inst.in
source/lac/: CMakeLists.txt  sm_vector.cc  sm_vector.inst.in
tests/: CMakeLists.txt  tests.h  tests_functions.h  tests_mf.h
tests/base/: memory_consumpition_01.cc  memory_consumpition_01.mpirun=1.output
tests/matrix_free/: CMakeLists.txt  fefaceevalutation_01.cc  fefaceevalutation_01.mpirun=1.output  fefaceevalutation_02.cc  fefaceevalutation_02.mpirun=1.output
tests/mpi/: cartesian_01.cc  cartesian_01.mpirun=21.output  sm_01.cc  sm_01.mpirun=5.output  z_order_01.cc  z_order_01.mpirun=28.output
tests/poisson/: poisson_01.cc  poisson_01.output  poisson_02.cc  poisson_02.output  poisson_03.cc  poisson_03.output
tests/time_discretization/: time_integrators_01.cc  time_integrators_01.output  time_integrators_02.cc  time_integrators_02.mpirun=1.output  time_integrators_02.mpirun=4.output  time_integrators_03.cc  time_integrators_03.with_petsc=on.mpirun=1.output  time_integrators_03.with_petsc=on.mpirun=4.output  time_integrators_04.cc
tests/utilities/: decompose_01.cc  decompose_01.output  lex_01.cc  lex_01.output
tests/vector/: partitioner_01.cc  partitioner_01.with_p4est=true.mpirun=1.output  partitioner_02.cc  partitioner_02.mpirun=4.output  partitioner_02.mpirun=8.output
tests/vector_tools/: CMakeLists.txt  vector_tools_01.cc  vector_tools_01.mpirun=1.output  vector_tools_01.mpirun=24.output  vector_tools_02.cc  vector_tools_02.mpirun=1.output  vector_tools_02.mpirun=24.output  vector_tools_03.cc  vector_tools_03.mpirun=1.output  vector_tools_03.mpirun=24.output
tests/vlasov_poisson/: vlasov_poisson.cc  vlasov_poisson.json
(+70 files in other folders)
